adaptive markup - index
all is done except:
what  is not finished:
- header
- footer
-modal

--- a/index.html
+++ b/index.html
@@ -153,7 +153,11 @@
                   <source srcset="./images/team-member-1-270.jpg" media="(min-width: 1200px)" />
                   <source srcset="./images/team-member-1-354.jpg" media="(min-width: 768px)" />
                   <source srcset="./images/team-member-1-450.jpg" media="(min-width: 480px)" />
-                  <img class="our_team__pic" src="#" alt="Игорь Демьяненко" />
+                  <img
+                    class="our_team__pic"
+                    src="./images/team-member-1-450.jpg"
+                    alt="Игорь Демьяненко"
+                  />
                 </picture>
 
                 <div class="our-team-member-descr">
@@ -209,7 +213,11 @@
                   <source srcset="./images/team-member-2-270.jpg" media="(min-width: 1200px)" />
                   <source srcset="./images/team-member-2-354.jpg" media="(min-width: 768px)" />
                   <source srcset="./images/team-member-2-450.jpg" media="(min-width: 480px)" />
-                  <img class="our_team__pic" src="#" alt="Ольга Репина" />
+                  <img
+                    class="our_team__pic"
+                    src="./images/team-member-2-450.jpg"
+                    alt="Ольга Репина"
+                  />
                 </picture>
                 <div class="our-team-member-descr">
                   <h3 class="member-name">Ольга Репина</h3>
@@ -264,7 +272,11 @@
                   <source srcset="./images/team-member-3-270.jpg" media="(min-width: 1200px)" />
                   <source srcset="./images/team-member-3-354.jpg" media="(min-width: 768px)" />
                   <source srcset="./images/team-member-3-450.jpg" media="(min-width: 480px)" />
-                  <img class="our_team__pic" src="#" alt="Николай Тарасов" />
+                  <img
+                    class="our_team__pic"
+                    src="./images/team-member-3-450.jpg"
+                    alt="Николай Тарасов"
+                  />
                 </picture>
                 <div class="our-team-member-descr">
                   <h3 class="member-name">Николай Тарасов</h3>
@@ -320,7 +332,11 @@
                   <source srcset="./images/team-member-4-270.jpg" media="(min-width: 1200px)" />
                   <source srcset="./images/team-member-4-354.jpg" media="(min-width: 768px)" />
                   <source srcset="./images/team-member-4-450.jpg" media="(min-width: 480px)" />
-                  <img class="our_team__pic" src="#" alt="Михаил Ермаков" />
+                  <img
+                    class="our_team__pic"
+                    src="./images/team-member-4-450.jpg"
+                    alt="Михаил Ермаков"
+                  />
                 </picture>
 
                 <div class="our-team-member-descr">
@@ -364,7 +380,7 @@
         </div>
       </section>
 
-      <!-- <section class="our-clients section">
+      <section class="our-clients section">
         <div class="container">
           <h2 class="our-clients__title">Постоянные клиенты</h2>
           <ul class="our-clients__list">
@@ -412,7 +428,7 @@
             </li>
           </ul>
         </div>
-      </section> -->
+      </section>
     </main>
 
     <!-- <footer class="page-footer">
