--- a/portfolio.html
+++ b/portfolio.html
@@ -15,7 +15,7 @@
     <link rel="stylesheet" href="./css/main.min.css" />
   </head>
   <body>
-    <header class="page-header">
+    <!--     <header class="page-header">
       <div class="container">
         <a class="logo" href="">Web<span class="logo-black">Studio</span></a>
         <nav class="page-nav">
@@ -46,7 +46,7 @@
           </li>
         </ul>
       </div>
-    </header>
+    </header> -->
     <main>
       <section class="projects section">
         <div class="container">
@@ -223,7 +223,7 @@
         </div>
       </section>
     </main>
-    <footer class="page-footer">
+    <!--    <footer class="page-footer">
       <div class="container">
         <div class="footer-logo-address">
           <a class="logo" href="">Web<span class="logo-white">Studio</span></a>
@@ -292,6 +292,6 @@
           </form>
         </div>
       </div>
-    </footer>
+    </footer> -->
   </body>
 </html>
