--- a/portfolio.html
+++ b/portfolio.html
@@ -58,11 +58,24 @@
             <li class="filter-element"><button type="button">Дизайн</button></li>
             <li class="filter-element"><button type="button">Маркетинг</button></li>
           </ul>
+
           <ul class="projects-list">
             <li class="projects-element">
               <a class="projects-element-link" href="">
                 <div class="projects-element-wrapper">
-                  <img src="./images/portfolio1.jpg" alt="Технокряк - Веб сайт" width="370" />
+                  <!-- <img src="./images/portfolio1.jpg" alt="Технокряк - Веб сайт" width="370" /> -->
+
+                  <picture class="picture">
+                    <source srcset="./images/portfolio-1-370.jpg" media="(min-width: 1200px)" />
+                    <source srcset="./images/portfolio-1-354.jpg" media="(min-width: 768px)" />
+                    <source srcset="./images/portfolio-1-450.jpg" media="(min-width: 480px)" />
+                    <img
+                      class="projects__pic"
+                      src="./images/portfolio-1-450.jpg"
+                      alt="Технокряк - Веб сайт"
+                    />
+                  </picture>
+
                   <p class="project-element-popup-text">
                     Технокряк это современная площадка распространения коронавируса. Компании
                     используют эту платформу для цифрового шпионажа и атак на защищённые сервера
@@ -78,11 +91,23 @@
             <li class="projects-element">
               <a class="projects-element-link" href="">
                 <div class="projects-element-wrapper">
-                  <img
+                  <!--                   <img
                     src="./images/portfolio2.jpg"
                     alt="Постер New Orlean vs Golden Star"
                     width="370"
-                  />
+                  /> -->
+
+                  <picture class="picture">
+                    <source srcset="./images/portfolio-2-370.jpg" media="(min-width: 1200px)" />
+                    <source srcset="./images/portfolio-2-354.jpg" media="(min-width: 768px)" />
+                    <source srcset="./images/portfolio-2-450.jpg" media="(min-width: 480px)" />
+                    <img
+                      class="projects__pic"
+                      src="./images/portfolio-2-450.jpg"
+                      alt="Постер New Orlean vs Golden Star"
+                    />
+                  </picture>
+
                   <p class="project-element-popup-text">
                     Технокряк это современная площадка распространения коронавируса. Компании
                     используют эту платформу для цифрового шпионажа и атак на защищённые сервера
@@ -98,11 +123,23 @@
             <li class="projects-element">
               <a class="projects-element-link" href="">
                 <div class="projects-element-wrapper">
-                  <img
+                  <!--                   <img
                     src="./images/portfolio3.jpg"
                     alt="Ресторан Seafood - приложение"
                     width="370"
-                  />
+                  /> -->
+
+                  <picture class="picture">
+                    <source srcset="./images/portfolio-3-370.jpg" media="(min-width: 1200px)" />
+                    <source srcset="./images/portfolio-3-354.jpg" media="(min-width: 768px)" />
+                    <source srcset="./images/portfolio-3-450.jpg" media="(min-width: 480px)" />
+                    <img
+                      class="projects__pic"
+                      src="./images/portfolio-3-450.jpg"
+                      alt="Ресторан Seafood - приложение"
+                    />
+                  </picture>
+
                   <p class="project-element-popup-text">
                     Технокряк это современная площадка распространения коронавируса. Компании
                     используют эту платформу для цифрового шпионажа и атак на защищённые сервера
@@ -118,7 +155,19 @@
             <li class="projects-element">
               <a class="projects-element-link" href="">
                 <div class="projects-element-wrapper">
-                  <img src="./images/portfolio4.jpg" alt="Проект Prime" width="370" />
+                  <!--                   <img src="./images/portfolio4.jpg" alt="Проект Prime" width="370" /> -->
+
+                  <picture class="picture">
+                    <source srcset="./images/portfolio-4-370.jpg" media="(min-width: 1200px)" />
+                    <source srcset="./images/portfolio-4-354.jpg" media="(min-width: 768px)" />
+                    <source srcset="./images/portfolio-4-450.jpg" media="(min-width: 480px)" />
+                    <img
+                      class="projects__pic"
+                      src="./images/portfolio-4-450.jpg"
+                      alt="Проект Prime"
+                    />
+                  </picture>
+
                   <p class="project-element-popup-text">
                     Технокряк это современная площадка распространения коронавируса. Компании
                     используют эту платформу для цифрового шпионажа и атак на защищённые сервера
@@ -134,7 +183,19 @@
             <li class="projects-element">
               <a class="projects-element-link" href="">
                 <div class="projects-element-wrapper">
-                  <img src="./images/portfolio5.jpg" alt="Проект Boxes - приложение" width="370" />
+                  <!-- <img src="./images/portfolio5.jpg" alt="Проект Boxes - приложение" width="370" /> -->
+
+                  <picture class="picture">
+                    <source srcset="./images/portfolio-5-370.jpg" media="(min-width: 1200px)" />
+                    <source srcset="./images/portfolio-5-354.jpg" media="(min-width: 768px)" />
+                    <source srcset="./images/portfolio-5-450.jpg" media="(min-width: 480px)" />
+                    <img
+                      class="projects__pic"
+                      src="./images/portfolio-5-450.jpg"
+                      alt="Проект Boxes - приложение"
+                    />
+                  </picture>
+
                   <p class="project-element-popup-text">
                     Технокряк это современная площадка распространения коронавируса. Компании
                     используют эту платформу для цифрового шпионажа и атак на защищённые сервера
@@ -150,11 +211,23 @@
             <li class="projects-element">
               <a class="projects-element-link" href="">
                 <div class="projects-element-wrapper">
-                  <img
+                  <!--                   <img
                     src="./images/portfolio6.jpg"
                     alt="Inspiration has no Borders - Веб сайт"
                     width="370"
-                  />
+                  /> -->
+
+                  <picture class="picture">
+                    <source srcset="./images/portfolio-6-370.jpg" media="(min-width: 1200px)" />
+                    <source srcset="./images/portfolio-6-354.jpg" media="(min-width: 768px)" />
+                    <source srcset="./images/portfolio-6-450.jpg" media="(min-width: 480px)" />
+                    <img
+                      class="projects__pic"
+                      src="./images/portfolio-6-450.jpg"
+                      alt="Inspiration has no Borders - Веб сайт"
+                    />
+                  </picture>
+
                   <p class="project-element-popup-text">
                     Технокряк это современная площадка распространения коронавируса. Компании
                     используют эту платформу для цифрового шпионажа и атак на защищённые сервера
@@ -170,7 +243,19 @@
             <li class="projects-element">
               <a class="projects-element-link" href="">
                 <div class="projects-element-wrapper">
-                  <img src="./images/portfolio7.jpg" alt="Издание Limited Edition" width="370" />
+                  <!-- <img src="./images/portfolio7.jpg" alt="Издание Limited Edition" width="370" /> -->
+
+                  <picture class="picture">
+                    <source srcset="./images/portfolio-7-370.jpg" media="(min-width: 1200px)" />
+                    <source srcset="./images/portfolio-7-354.jpg" media="(min-width: 768px)" />
+                    <source srcset="./images/portfolio-7-450.jpg" media="(min-width: 480px)" />
+                    <img
+                      class="projects__pic"
+                      src="./images/portfolio-7-450.jpg"
+                      alt="Издание Limited Edition"
+                    />
+                  </picture>
+
                   <p class="project-element-popup-text">
                     Технокряк это современная площадка распространения коронавируса. Компании
                     используют эту платформу для цифрового шпионажа и атак на защищённые сервера
@@ -186,7 +271,19 @@
             <li class="projects-element">
               <a class="projects-element-link" href="">
                 <div class="projects-element-wrapper">
-                  <img src="./images/portfolio8.jpg" alt="Проект LAB" width="370" />
+                  <!--                   <img src="./images/portfolio8.jpg" alt="Проект LAB" width="370" /> -->
+
+                  <picture class="picture">
+                    <source srcset="./images/portfolio-8-370.jpg" media="(min-width: 1200px)" />
+                    <source srcset="./images/portfolio-8-354.jpg" media="(min-width: 768px)" />
+                    <source srcset="./images/portfolio-8-450.jpg" media="(min-width: 480px)" />
+                    <img
+                      class="projects__pic"
+                      src="./images/portfolio-8-450.jpg"
+                      alt="Проект LAB"
+                    />
+                  </picture>
+
                   <p class="project-element-popup-text">
                     Технокряк это современная площадка распространения коронавируса. Компании
                     используют эту платформу для цифрового шпионажа и атак на защищённые сервера
@@ -202,11 +299,23 @@
             <li class="projects-element">
               <a class="projects-element-link" href="">
                 <div class="projects-element-wrapper">
-                  <img
+                  <!--                   <img
                     src="./images/portfolio9.jpg"
                     alt="Growing Business - приложение"
                     width="370"
-                  />
+                  /> -->
+
+                  <picture class="picture">
+                    <source srcset="./images/portfolio-9-370.jpg" media="(min-width: 1200px)" />
+                    <source srcset="./images/portfolio-9-354.jpg" media="(min-width: 768px)" />
+                    <source srcset="./images/portfolio-9-450.jpg" media="(min-width: 480px)" />
+                    <img
+                      class="projects__pic"
+                      src="./images/portfolio-9-450.jpg"
+                      alt="Growing Business - приложение"
+                    />
+                  </picture>
+
                   <p class="project-element-popup-text">
                     Технокряк это современная площадка распространения коронавируса. Компании
                     используют эту платформу для цифрового шпионажа и атак на защищённые сервера
