--- a/index.html
+++ b/index.html
@@ -431,7 +431,7 @@
       </section>
     </main>
 
-    <!-- <footer class="page-footer">
+    <footer class="page-footer">
       <div class="container">
         <div class="footer-logo-address">
           <a class="logo" href="">Web<span class="logo-white">Studio</span></a>
@@ -500,7 +500,7 @@
           </form>
         </div>
       </div>
-    </footer> -->
+    </footer>
 
     <div class="backdrop is-hidden" data-modal>
       <div class="modal">
