--- a/portfolio.html
+++ b/portfolio.html
@@ -332,7 +332,7 @@
         </div>
       </section>
     </main>
-    <!--    <footer class="page-footer">
+    <footer class="page-footer">
       <div class="container">
         <div class="footer-logo-address">
           <a class="logo" href="">Web<span class="logo-white">Studio</span></a>
@@ -401,6 +401,6 @@
           </form>
         </div>
       </div>
-    </footer> -->
+    </footer>
   </body>
 </html>
