--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <link rel="stylesheet" href="./css/main.min.css" />
   </head>
   <body>
-    <!--     <header class="page-header">
+    <header class="page-header">
       <div class="container">
         <a class="logo" href="">Web<span class="logo-black">Studio</span></a>
         <nav class="page-nav">
@@ -25,6 +25,11 @@
             <li class="navigation-element"><a href="">Контакты</a></li>
           </ul>
         </nav>
+        <button class="page-header__burger-btn" type="button">
+          <svg class="page-header__burger-icon" width="24px" height="16px">
+            <use href="./images/icons.svg#icon-burger"></use>
+          </svg>
+        </button>
         <ul class="contacts-list-header">
           <li class="contacts-header-element contacts-header-icon-mail">
             <a class="email-link" href="mailto:info@devstudio.com">
@@ -44,7 +49,7 @@
           </li>
         </ul>
       </div>
-    </header> -->
+    </header>
 
     <main>
       <section class="hero section">
