adaptive - mob-menu - done
what next:
 - modal

--- a/index.html
+++ b/index.html
@@ -51,11 +51,27 @@
       </div>
 
       <div class="mobile-menu" data-menu>
+        <!--         <div class="mobile-menu__container"> -->
         <button class="mobile-menu__close-btn" type="button" data-menu-close>
-          <svg class="mobile-menu__close-icon" width="11px" height="11px">
+          <svg class="mobile-menu__close-icon" width="18px" height="18px">
             <use href="./images/icons.svg#icon-cross"></use>
           </svg>
         </button>
+        <ul class="mobile-menu__nav-items">
+          <li class="mobile-nav-item is-mobile-active"><a href="./index.html">Студия</a></li>
+          <li class="mobile-nav-item"><a href="./portfolio.html">Портфолио</a></li>
+          <li class="mobile-nav-item"><a href="">Контакты</a></li>
+        </ul>
+        <a class="mobile-menu__tel" href="tel:+380961111111">+38 096 111 11 11</a>
+        <a class="mobile-menu__email" href="mailto:info@devstudio.com">info@devstudio.com</a>
+        <ul class="mobile-menu__social-links">
+          <li class="mobile-social-link"><a href="" class="social-link">Instagram</a></li>
+          <li class="mobile-social-link"><a href="" class="social-link">Twitter</a></li>
+          <li class="mobile-social-link"><a href="" class="social-link">Facebook</a></li>
+          <li class="mobile-social-link"><a href="" class="social-link">Linkedin</a></li>
+        </ul>
+
+        <!--         </div> -->
       </div>
     </header>
 
