adaptive - modal - stage 1

--- a/index.html
+++ b/index.html
@@ -602,7 +602,7 @@
             id="modal-comment"
             placeholder="Введите текст"
           ></textarea>
-          <div class="agreemet-wrapper">
+          <div class="agreement-wrapper">
             <!--<svg class="modal-check-icon" width="13px" height="10px">
               <use href="./images/icons.svg#icon-check"></use>
             </svg> -->
@@ -615,7 +615,7 @@
             />
             <label for="modal-agreement" class="agreement-label">
               Соглашаюсь с рассылкой и принимаю &nbsp;
-              <a class="agreemet-link" href="">Условия договора</a>
+              <a class="agreement-link" href="">Условия договора</a>
             </label>
           </div>
           <button class="submit-btn" type="submit">Отправить</button>
