adaptive - add webp for 1st team member

--- a/index.html
+++ b/index.html
@@ -179,9 +179,24 @@
                 /> -->
 
                 <picture class="picture">
-                  <source srcset="./images/team-member-1-270.jpg" media="(min-width: 1200px)" />
-                  <source srcset="./images/team-member-1-354.jpg" media="(min-width: 768px)" />
-                  <source srcset="./images/team-member-1-450.jpg" media="(min-width: 480px)" />
+                  <source srcset="./images/team-member-1-270.jpg 1x" media="(min-width: 1200px)" />
+                  <source
+                    srcset="./images/team-member-1-270.webp 1x"
+                    media="(min-width: 1200px)"
+                    type="image/webp"
+                  />
+                  <source srcset="./images/team-member-1-354.jpg 1x" media="(min-width: 768px)" />
+                  <source
+                    srcset="./images/team-member-1-354.webp 1x"
+                    media="(min-width: 768px)"
+                    type="image/webp"
+                  />
+                  <source srcset="./images/team-member-1-450.jpg 1x" media="(min-width: 480px)" />
+                  <source
+                    srcset="./images/team-member-1-450.webp 1x"
+                    media="(min-width: 480px)"
+                    type="image/webp"
+                  />
                   <img
                     class="our_team__pic"
                     src="./images/team-member-1-450.jpg"
