--- a/index.html
+++ b/index.html
@@ -179,21 +179,39 @@
                 /> -->
 
                 <picture class="picture">
-                  <source srcset="./images/team-member-1-270.jpg 1x" media="(min-width: 1200px)" />
                   <source
-                    srcset="./images/team-member-1-270.webp 1x"
+                    srcset="./images/team-member-1-270.jpg 1x, ./images/team-member-1-270@2x.jpg 2x"
+                    media="(min-width: 1200px)"
+                  />
+                  <source
+                    srcset="
+                      ./images/team-member-1-270.webp    1x,
+                      ./images/team-member-1-270@2x.webp 2x
+                    "
                     media="(min-width: 1200px)"
                     type="image/webp"
                   />
-                  <source srcset="./images/team-member-1-354.jpg 1x" media="(min-width: 768px)" />
                   <source
-                    srcset="./images/team-member-1-354.webp 1x"
+                    srcset="./images/team-member-1-354.jpg 1x, ./images/team-member-1-354@2x.jpg 2x"
+                    media="(min-width: 768px)"
+                  />
+                  <source
+                    srcset="
+                      ./images/team-member-1-354.webp    1x,
+                      ./images/team-member-1-354@2x.webp 2x
+                    "
                     media="(min-width: 768px)"
                     type="image/webp"
                   />
-                  <source srcset="./images/team-member-1-450.jpg 1x" media="(min-width: 480px)" />
                   <source
-                    srcset="./images/team-member-1-450.webp 1x"
+                    srcset="./images/team-member-1-450.jpg 1x, ./images/team-member-1-450@2x.jpg 2x"
+                    media="(min-width: 480px)"
+                  />
+                  <source
+                    srcset="
+                      ./images/team-member-1-450.webp    1x,
+                      ./images/team-member-1-450@2x.webp 2x
+                    "
                     media="(min-width: 480px)"
                     type="image/webp"
                   />
@@ -242,21 +260,43 @@
             </li>
             <li class="our-team-member">
               <div class="our-team__member-card">
-                <!--                 <img
-                  class="our_team__pic"
-                  srcset="
-                    ./images/team-member-2-450.jpg 450w,
-                    ./images/team-member-2-354.jpg 354w,
-                    ./images/team-member-2-270.jpg 270w
-                  "
-                  src="./images/team-member-2-450.jpg"
-                  sizes=" (min-width:1200px) 270px, (min-width: 768px) 354px, (min-width: 480px) 450px, 100vw"
-                  alt="Ольга Репина"
-                /> -->
                 <picture class="picture">
-                  <source srcset="./images/team-member-2-270.jpg" media="(min-width: 1200px)" />
-                  <source srcset="./images/team-member-2-354.jpg" media="(min-width: 768px)" />
-                  <source srcset="./images/team-member-2-450.jpg" media="(min-width: 480px)" />
+                  <source
+                    srcset="./images/team-member-2-270.jpg 1x, ./images/team-member-2-270@2x.jpg 2x"
+                    media="(min-width: 1200px)"
+                  />
+                  <source
+                    srcset="
+                      ./images/team-member-2-270.webp    1x,
+                      ./images/team-member-2-270@2x.webp 2x
+                    "
+                    media="(min-width: 1200px)"
+                    type="image/webp"
+                  />
+                  <source
+                    srcset="./images/team-member-2-354.jpg 1x, ./images/team-member-2-354@2x.jpg 2x"
+                    media="(min-width: 768px)"
+                  />
+                  <source
+                    srcset="
+                      ./images/team-member-2-354.webp    1x,
+                      ./images/team-member-2-354@2x.webp 2x
+                    "
+                    media="(min-width: 768px)"
+                    type="image/webp"
+                  />
+                  <source
+                    srcset="./images/team-member-2-450.jpg 1x, ./images/team-member-2-450@2x.jpg 2x"
+                    media="(min-width: 480px)"
+                  />
+                  <source
+                    srcset="
+                      ./images/team-member-2-450.webp    1x,
+                      ./images/team-member-2-450@2x.webp 2x
+                    "
+                    media="(min-width: 480px)"
+                    type="image/webp"
+                  />
                   <img
                     class="our_team__pic"
                     src="./images/team-member-2-450.jpg"
@@ -301,21 +341,43 @@
             </li>
             <li class="our-team-member">
               <div class="our-team__member-card">
-                <!--                 <img
-                  class="our_team__pic"
-                  srcset="
-                    ./images/team-member-3-450.jpg 450w,
-                    ./images/team-member-3-354.jpg 354w,
-                    ./images/team-member-3-270.jpg 270w
-                  "
-                  src="./images/team-member-3-450.jpg"
-                  sizes=" (min-width:1200px) 270px, (min-width: 768px) 354px, (min-width: 480px) 450px, 100vw"
-                  alt="Николай Тарасов"
-                /> -->
                 <picture class="picture">
-                  <source srcset="./images/team-member-3-270.jpg" media="(min-width: 1200px)" />
-                  <source srcset="./images/team-member-3-354.jpg" media="(min-width: 768px)" />
-                  <source srcset="./images/team-member-3-450.jpg" media="(min-width: 480px)" />
+                  <source
+                    srcset="./images/team-member-3-270.jpg 1x, ./images/team-member-3-270@2x.jpg 2x"
+                    media="(min-width: 1200px)"
+                  />
+                  <source
+                    srcset="
+                      ./images/team-member-3-270.webp    1x,
+                      ./images/team-member-3-270@2x.webp 2x
+                    "
+                    media="(min-width: 1200px)"
+                    type="image/webp"
+                  />
+                  <source
+                    srcset="./images/team-member-3-354.jpg 1x, ./images/team-member-3-354@2x.jpg 2x"
+                    media="(min-width: 768px)"
+                  />
+                  <source
+                    srcset="
+                      ./images/team-member-3-354.webp    1x,
+                      ./images/team-member-3-354@2x.webp 2x
+                    "
+                    media="(min-width: 768px)"
+                    type="image/webp"
+                  />
+                  <source
+                    srcset="./images/team-member-3-450.jpg 1x, ./images/team-member-3-450@2x.jpg 2x"
+                    media="(min-width: 480px)"
+                  />
+                  <source
+                    srcset="
+                      ./images/team-member-3-450.webp    1x,
+                      ./images/team-member-3-450@2x.webp 2x
+                    "
+                    media="(min-width: 480px)"
+                    type="image/webp"
+                  />
                   <img
                     class="our_team__pic"
                     src="./images/team-member-3-450.jpg"
@@ -361,21 +423,43 @@
             </li>
             <li class="our-team-member">
               <div class="our-team__member-card">
-                <!-- <img
-                  class="our_team__pic"
-                  srcset="
-                    ./images/team-member-4-450.jpg 450w,
-                    ./images/team-member-4-354.jpg 354w,
-                    ./images/team-member-4-270.jpg 270w
-                  "
-                  src="./images/team-member-4-450.jpg"
-                  sizes=" (min-width:1200px) 270px, (min-width: 768px) 354px, (min-width: 480px) 450px, 100vw"
-                  alt="Михаил Ермаков"
-                /> -->
                 <picture class="picture">
-                  <source srcset="./images/team-member-4-270.jpg" media="(min-width: 1200px)" />
-                  <source srcset="./images/team-member-4-354.jpg" media="(min-width: 768px)" />
-                  <source srcset="./images/team-member-4-450.jpg" media="(min-width: 480px)" />
+                  <source
+                    srcset="./images/team-member-4-270.jpg 1x, ./images/team-member-4-270@2x.jpg 2x"
+                    media="(min-width: 1200px)"
+                  />
+                  <source
+                    srcset="
+                      ./images/team-member-4-270.webp    1x,
+                      ./images/team-member-4-270@2x.webp 2x
+                    "
+                    media="(min-width: 1200px)"
+                    type="image/webp"
+                  />
+                  <source
+                    srcset="./images/team-member-4-354.jpg 1x, ./images/team-member-4-354@2x.jpg 2x"
+                    media="(min-width: 768px)"
+                  />
+                  <source
+                    srcset="
+                      ./images/team-member-4-354.webp    1x,
+                      ./images/team-member-4-354@2x.webp 2x
+                    "
+                    media="(min-width: 768px)"
+                    type="image/webp"
+                  />
+                  <source
+                    srcset="./images/team-member-4-450.jpg 1x, ./images/team-member-4-450@2x.jpg 2x"
+                    media="(min-width: 480px)"
+                  />
+                  <source
+                    srcset="
+                      ./images/team-member-4-450.webp    1x,
+                      ./images/team-member-4-450@2x.webp 2x
+                    "
+                    media="(min-width: 480px)"
+                    type="image/webp"
+                  />
                   <img
                     class="our_team__pic"
                     src="./images/team-member-4-450.jpg"
