--- a/portfolio.html
+++ b/portfolio.html
@@ -91,17 +91,35 @@
             <li class="projects-element">
               <a class="projects-element-link" href="">
                 <div class="projects-element-wrapper">
-                  <!-- <img src="./images/portfolio1.jpg" alt="Технокряк - Веб сайт" width="370" /> -->
-
                   <picture class="picture">
-                    <source srcset="./images/portfolio-1-370.jpg" media="(min-width: 1200px)" />
-                    <source srcset="./images/portfolio-1-354.jpg" media="(min-width: 768px)" />
-                    <source srcset="./images/portfolio-1-450.jpg" media="(min-width: 480px)" />
-                    <img
-                      class="projects__pic"
-                      src="./images/portfolio-1-450.jpg"
-                      alt="Технокряк - Веб сайт"
+                    <source
+                      srcset="./images/portfolio-1-370.jpg 1x, ./images/portfolio-1-370@2x.jpg 2x"
+                      media="(min-width: 1200px)"
                     />
+                    <source
+                      srcset="./images/portfolio-1-370.webp 1x, ./images/portfolio-1-370@2x.webp 2x"
+                      media="(min-width: 1200px)"
+                      type="image/webp"
+                    />
+                    <source
+                      srcset="./images/portfolio-1-354.jpg 1x, ./images/portfolio-1-354@2x.jpg 2x"
+                      media="(min-width: 768px)"
+                    />
+                    <source
+                      srcset="./images/portfolio-1-354.webp 1x, ./images/portfolio-1-354@2x.webp 2x"
+                      media="(min-width: 768px)"
+                      type="image/webp"
+                    />
+                    <source
+                      srcset="./images/portfolio-1-450.jpg 1x, ./images/portfolio-1-450@2x.jpg 2x"
+                      media="(min-width: 480px)"
+                    />
+                    <source
+                      srcset="./images/portfolio-1-450.webp 1x, ./images/portfolio-1-450@2x.webp 2x"
+                      media="(min-width: 480px)"
+                      type="image/webp"
+                    />
+                    <img class="projects__pic" src="./images/portfolio-1-450.jpg" alt="Технокряк" />
                   </picture>
 
                   <p class="project-element-popup-text">
