adaptive - highlite the current page

--- a/portfolio.html
+++ b/portfolio.html
@@ -58,8 +58,10 @@
             </svg>
           </button>
           <ul class="mobile-menu__nav-items">
-            <li class="mobile-nav-item is-mobile-active"><a href="./index.html">Студия</a></li>
-            <li class="mobile-nav-item"><a href="./portfolio.html">Портфолио</a></li>
+            <li class="mobile-nav-item"><a href="./index.html">Студия</a></li>
+            <li class="mobile-nav-item is-mobile-active">
+              <a href="./portfolio.html">Портфолио</a>
+            </li>
             <li class="mobile-nav-item"><a href="">Контакты</a></li>
           </ul>
           <a class="mobile-menu__tel" href="tel:+380961111111">+38 096 111 11 11</a>
